--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "license": "MIT",
   "devDependencies": {
     "nodemon": "^3.1.9"
+  },
+  "dependencies": {
+    "express": "^4.21.2",
+    "mongoose": "^8.10.1"
   }
 }
